pkg/lang/testdata/ub/constraints/valid/check-predicate-for-each-when-gates-per-element.ub
constraints: [
  {
    kind:      predicate
    @for-each: input.replicas
    when:      @each.value.enabled == true
    require:   @each.value.tls == true
  },
]
