pkg/lang/testdata/ub/constraints/invalid/for-each-bare-name.ub
constraints: [
  {
    kind: predicate
    @for-each: [ { rule: input.rules }, ]
    when:    true
    require: true
  },
]
